updated css. image borders are no longer square, word-wrap is set to break-word.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -51,6 +51,7 @@ html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  word-wrap: break-word;/* -JFLY */
 }
 @media (min-width: 38em) {
   html {
@@ -231,7 +232,7 @@ img {
   display: block;
   max-width: 100%;
   margin: 0 0 1rem;
-  border-radius: 5px;
+  /*border-radius: 5px; -JFLY*/
 }
 
 /* Tables */
